# SlamTorch

./: .gitignore  AR_IMPLEMENTATION.md  settings.gradle.kts
.github/: copilot-instructions.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/slamtorch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArCoreSlam.cpp  ArCoreSlam.h  BackgroundRenderer.cpp  BackgroundRenderer.h  CMakeLists.txt  DebugHud.cpp  DebugHud.h  DepthFrame.h  DepthMapper.cpp  DepthMapper.h  DepthMeshRenderer.cpp  DepthMeshRenderer.h  DepthOverlayRenderer.cpp  DepthOverlayRenderer.h  JniBridge.cpp  KeyframeLite.cpp  KeyframeLite.h  LandmarkMap.cpp  LandmarkMap.h  OpticalFlowTracker.cpp  OpticalFlowTracker.h  PersistentPointMap.cpp  PersistentPointMap.h  PlaneRenderer.cpp  PlaneRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h  Renderer.cpp  Renderer.h  VoxelMapRenderer.cpp  VoxelMapRenderer.h  main.cpp
app/src/main/java/com/example/slamtorch/: MainActivity.kt  TorchController.kt
app/src/main/res/drawable/: pill_background.xml
app/src/main/res/layout/: activity_main.xml  overlay_controls.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/slamtorch/: ExampleUnitTest.kt
gradle/: libs.versions.toml
